--- a/app/views/mailer/notification_email.html.erb
+++ b/app/views/mailer/notification_email.html.erb
@@ -11,7 +11,7 @@
       <b><%= @user.question %>.</b>
       <br/>
     </p>
-    <p>we will get back to you with solution shortly </p>
+    <p>we will get back to you with solution within 24 hours </p>
     <p>Have a great day!</p>
   </body>
 </html>
