--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New query</h1>
+<!--<h1>New query</h1>-->
 
 <%= render 'form' %>
 
-<%= link_to 'Back', queries_path %>
+<!--<%= link_to 'Back', queries_path %>-->
