Added Flash notice

--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -15,7 +15,9 @@
     <%= f.label :user_name %><br />
     <%= f.text_field :user_name %>
   </div>-->
-
+  <p id="notice">
+    <%= notice %>
+  </p>
   <div class="field img" align="center">
     <%= image_tag "search.jpg" %>
   </div>
