--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,7 +3,7 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require_tree . 
+ *= require_tree .
 */
 
 /*.txtarea{margin-top:275px;}*/
@@ -11,5 +11,19 @@
 .submt_btn{margin-top:24px;}
 
 .query_eml{color:#CCCCCC; font-style:italic;}
+input { color: black;}
+#flash {
+  color: #426A15;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 10px;
+  padding: 12px 6px 13px 40px;
+  text-align: left;
+}
+.notice {
+    background: url("/assets/tick.png") no-repeat scroll 7px center transparent;
+}
+.error {
+    background: url("/assets/cross.png") no-repeat scroll 7px center transparent;
+}
 
-.img{}
