--- a/app/views/mailer/notification_email.html.erb
+++ b/app/views/mailer/notification_email.html.erb
@@ -4,15 +4,19 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome <%= @user.user_name %></h1>
+    <p>Hi,</p>
     <p>
-      You have successfully posted your question in our Site. <br/>
-      Your question is: <br/>
-      <b><%= @user.question %>.</b>
+      This is to inform you that your query,
+      <b>"<%= @user.question %>."</b> has reached to our experts.
       <br/>
     </p>
-    <p>we will get back to you with solution within 24 hours </p>
-    <p>Have a great day!</p>
+    <p>We will knock your Mailbox again with an Answer within 24 hours.</p>
+    <p>In the mean time feel free to post your other queries on <a href="www.wesearchwell.com">www.wesearchwell.com</a>.</p>
+		<p>
+			Thanks & Regards<br/>
+			WeSearchWell Team<br/>
+     	India
+		</p>
   </body>
 </html>
 
