modified notification amiler, commented flash message images

--- a/app/views/mailer/notification_email.html.erb
+++ b/app/views/mailer/notification_email.html.erb
@@ -7,7 +7,7 @@
     <p>Hi,</p>
     <p>
       This is to inform you that your query,
-      <b>"<%= @user.question %>."</b> has reached to our experts.
+      <b>"<%= @user.question %>."</b> has reached our experts.
       <br/>
     </p>
     <p>We will knock your Mailbox again with an Answer within 24 hours.</p>
@@ -16,7 +16,8 @@
 			Thanks & Regards<br/>
 			WeSearchWell Team<br/>
      	India
-		</p>
+		</p><br/>
+		<p>Please reach out to us for your invaluable suggestions and feedback at <a href="#">feedback@wesearchwell.com</a></p>
   </body>
 </html>
 
