--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,15 +14,16 @@
 #flash {
   color: #426A15;
   font-size: 14px;
-  font-weight: 700;
+  /*font-weight: 700;*/
   margin: 10px;
   padding: 12px 6px 13px 40px;
   text-align: center;
 }
-.notice {
-    background: url("/assets/tick.png") no-repeat scroll 380px center transparent;
+/*.notice {
+    background: url("/assets/tick.png") no-repeat scroll 555px center transparent;
 }
 .error {
     background: url("/assets/cross.png") no-repeat scroll 570px center transparent;
 }
+*/
 
