--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--<title>Registration</title>-->
+  <title>We Search Well</title>
   <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "application", "jquery.watermark.min", "jquery.data" %>
   <%= csrf_meta_tags %>
 </head>
 <body style="background-color: white">
