--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>We Search Well</title>
   <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application", "jquery.watermark.min", "jquery.data" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body style="background-color: white">
