--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,20 @@
   /*padding: 12px 6px 13px 40px;*/
   text-align: center;
 }
+
+.footerlink{
+	margin-top:140px;
+	color:#424242;
+	font-family:Arial,Helvetica,sans-serif;
+	font-size:12px;
+	margin-left:10px;
+	text-align: center;
+}
+
+#query_question{
+	width :56%;
+}
+
 /*.notice {
     background: url("/assets/tick.png") no-repeat scroll 555px center transparent;
 }
